[tool.poetry]
name = "chat_analyzer"
version = "0.1.0"
description = ""
authors = ["DzesenKopeykin <kopeykindzzesen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Pyrogram = "^1.4.8"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.941"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
